# ai-agents-test

./: .gitignore  README.md
aider/: package-lock.json  package.json
aider/src/: audioService.ts  index.ts
composer/: .env  package-lock.json  package.json  tsconfig.json
composer/src/: audioProcessingService.ts  index.ts
deivka/: .env  package-lock.json  package.json  tsconfig.json
deivka/src/: .env  README.md  app.ts  assemblyAI.ts  ghostAdmin.ts  minioClient.ts  openAI.ts
replit/: config.py  generate_test_audio.py  main.py  pyproject.toml  replit_zip_error_log.txt
replit/static/css/: styles.css
replit/static/js/: main.js
replit/templates/: index.html
replit/utils/: assemblyai_client.py  ghost_client.py  openai_client.py
replit/utils/openai_chat_completion/: chat_request.py
workspaces/: README.md  package-lock.json  package.json
workspaces/src/: service.ts
